--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -9,7 +9,7 @@
     color: inherit;
     padding: 1.5rem 2rem;
     border-radius: 2px;
-    background-color: rgba($color-white, 0.5);
+    // background-color: rgba($color-white, 0.5);
     border: none;
     border-bottom: 3px solid transparent;
     width: 90%;
@@ -22,16 +22,16 @@
 
     &:focus {
       outline: none;
-      box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
-      border-bottom: 3px solid $color-primary;
+      // box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+      // border-bottom: 3px solid $color-primary;
     }
 
     &:focus:invalid {
-      border-bottom: 3px solid $color-secondary-dark;
+      // border-bottom: 3px solid $color-secondary-dark;
     }
 
     &::-webkit-input-placeholder {
-      color: $color-grey-dark-2;
+      // color: $color-grey-dark-2;
     }
   }
 
@@ -65,7 +65,7 @@
   }
 
   &__radio-label {
-    font-size: $default-font-size;
+    // font-size: $default-font-size;
     cursor: pointer;
     position: relative;
     padding-left: 4.5rem;
@@ -74,7 +74,7 @@
   &__radio-button {
     height: 3rem;
     width: 3rem;
-    border: 5px solid $color-primary;
+    // border: 5px solid $color-primary;
     border-radius: 50%;
     display: inline-block;
     position: absolute;
@@ -91,7 +91,7 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: $color-primary;
+      // background-color: $color-primary;
       opacity: 0;
       transition: opacity 0.2s;
     }
