--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -3,7 +3,6 @@ body {
   font-weight: 400;
   /*font-size: 16px;*/
   line-height: 1.7;
-  color: $color-grey-dark;
 }
 
 .heading-primary {
@@ -44,31 +43,42 @@ body {
   }
 }
 
-.heading-secondary {
-  font-size: 3.5rem;
-  font-weight: 700;
-  display: inline-block;
-  color: var(--light-slate);
-  letter-spacing: 0.2rem;
-  transition: all 0.2s;
-
-  @include respond(tab-port) {
-    font-size: 3rem;
-  }
-
-  @include respond(phone) {
-    font-size: 2.5rem;
-  }
-
-  &:hover {
-    transform: skewY(2deg) skewX(15deg) scale(1.1);
-    text-shadow: 0.5rem 1rem 2rem rgba($color-black, 0.2);
-  }
-}
-
 .heading-stylist {
   font-size: var(--fonts-xs);
   font-weight: 500;
   letter-spacing: 0.2rem;
   color: var(--green);
+}
+
+.section-heading {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
+  color: var(--white);
+  margin: 1rem 0px 4rem;
+  width: 100%;
+  font-size: var(--fonts-xl);
+  white-space: nowrap;
+
+  &::before {
+    position: relative;
+    counter-increment: section 1;
+    content: "0" counter(section) ".";
+    margin-right: 1rem;
+    color: var(--green);
+    font-family: var(--font-mono);
+    font-size: var(--fonts-lg);
+    font-weight: 400;
+  }
+
+  // &::after {
+  //   content: "";
+  //   display: block;
+  //   position: relative;
+  //   width: 300px;
+  //   height: 1px;
+  //   margin-left: 20px;
+  //   background-color: var(--lightest-slate);
+  // }
 }
