--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -8,8 +8,8 @@
   font-family: var(--font-mono);
   line-height: 1;
   text-decoration: none;
-  cursor: pointer;
   transition: var(--transition);
+
   &:hover,
   &:focus,
   &:active {
@@ -21,99 +21,22 @@
   }
 }
 
-.btn {
-  &,
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all 0.2s;
-    position: relative;
-    font-size: $default-font-size;
+.button-totop {
+  background-color: transparent;
+  border: 2px solid var(--logo-color);
+  border-radius: 50%;
+  bottom: 30px;
+  right: 30px;
+  display: inline-block;
+  height: 50px;
+  position: fixed;
+  text-align: center;
+  transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
+  width: 50px;
+  z-index: 999;
 
-    //Change for the <button> element
-    border: none;
+  &:hover {
     cursor: pointer;
-  }
-
-  &:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-
-    &::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0;
-    }
-  }
-
-  &:active,
-  &:focus {
-    outline: none;
-    transform: translateY(-1px);
-    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-  }
-
-  &--white {
-    background-color: $color-white;
-    color: $color-grey-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
-  }
-
-  &--green {
-    background-color: $color-primary;
-    color: $color-white;
-
-    &::after {
-      background-color: $color-primary;
-    }
-  }
-
-  &::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-  }
-
-  &--animated {
-    animation: moveInBottom 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards;
-  }
-}
-
-.btn-text {
-  &:link,
-  &:visited {
-    font-size: $default-font-size;
-    color: $color-primary;
-    display: inline-block;
-    text-decoration: none;
-    border-bottom: 1px solid $color-primary;
-    padding: 3px;
-    transition: all 0.2s;
-  }
-
-  &:hover {
-    background-color: $color-primary;
-    color: $color-white;
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
-    transform: translateY(-2px);
-  }
-
-  &:active {
-    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
-    transform: translateY(0);
+    background-color: #333;
   }
 }
