Feat: add scroll-reveal on app and fix tagCanvas responsiveness

--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -48,13 +48,23 @@
 
 @include respond(tab-land) {
   .section-about {
-    padding: 10rem 8rem;
+    padding: 10rem 6rem;
+  }
+
+  .about__tags-box {
+    align-self: center;
+    margin-top: -16rem;
   }
 }
 
 @include respond(tab-land-big) {
   .section-about {
-    padding: 10rem 12rem;
+    padding: 10rem 10rem;
+  }
+
+  .about__tags-box {
+    align-self: center;
+    margin-top: -16rem;
   }
 }
 
@@ -67,10 +77,14 @@
     margin-top: 3.6rem;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 1rem;
+    gap: 0rem;
 
     &__text-box {
       justify-self: center;
+    }
+
+    &__tags-box {
+      margin-top: -10rem;
     }
   }
 }
