--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -33,6 +33,7 @@
   // Font size
   --fonts-xxxs: 1em;
   --fonts-xxs: 1.2em;
+  --tabs-size: 1.3rem;
   --fonts-xs: 1.4rem;
   --fonts-sm: 1.6rem;
   --fonts-md: 2rem;
