--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -57,6 +57,7 @@ html {
 
 body {
   box-sizing: border-box;
+
   margin: 0;
   width: 100%;
   min-height: 100%;
@@ -65,6 +66,7 @@ body {
   background-color: var(--navy);
   font-family: var(--font-sans);
   line-height: 1.3;
+  counter-reset: my-section;
 
   &.hidden {
     overflow: hidden;
