--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -16,5 +16,6 @@
 @import "layout/navigation";
 
 @import "pages/about";
+@import "pages/projects";
 @import "pages/hero";
 @import "pages/experience";
