--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -957,6 +957,132 @@ nav .nav--links .resume-button {
     margin-top: 0rem;
   }
 }
+.section-projects {
+  padding: 10rem 22rem;
+}
+
+.project-container {
+  padding: 0 12rem;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(14, 30px);
+  align-items: center;
+  justify-content: center;
+}
+.project-container:not(:last-child) {
+  margin-bottom: 10rem;
+}
+.project-container .project-title {
+  letter-spacing: 0.1rem;
+}
+.project-container .project-title__main {
+  color: var(--white);
+  font-size: var(--fonts-lg);
+}
+.project-container .project-title__before {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  color: var(--green);
+  font-size: var(--fonts-sm);
+}
+.project-container .project-content {
+  font-size: 1.8rem;
+  line-height: 1.4;
+  z-index: 2;
+}
+.project-container .project-content__description {
+  background-color: var(--dark-navy);
+  color: var(--light-slate);
+  padding: 1.6rem;
+  border-radius: 3px;
+}
+.project-container .project-tools {
+  list-style: none;
+  color: var(--light-slate);
+  font-weight: 550;
+  font-style: italic;
+  font-size: var(--fonts-xs);
+  z-index: 3;
+}
+.project-container .project-tools li:not(:last-child) {
+  margin-right: 15px;
+}
+.project-container .project-tools li::before {
+  content: "◦";
+  margin-right: 3px;
+}
+.project-container .project-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--lightest-navy);
+  height: 100%;
+  width: 100%;
+  border-radius: 3px;
+  z-index: 1;
+}
+.project-container .project-image__btn {
+  z-index: 3;
+  position: absolute;
+  border: 0;
+  top: 0;
+  padding: 2rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  cursor: pointer;
+}
+.project-container:nth-child(odd) .project-title {
+  grid-area: 2/8/3/-1;
+  justify-self: end;
+}
+.project-container:nth-child(odd) .project-title__before {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.project-container:nth-child(odd) .project-content {
+  grid-area: 4/7/12/-1;
+}
+.project-container:nth-child(odd) .project-tools {
+  grid-area: 10/1/15/-1;
+  padding-left: 5px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.project-container:nth-child(odd) .project-image {
+  grid-area: 1/1/15/8;
+}
+.project-container:nth-child(odd) .project-image__btn {
+  left: 12rem;
+}
+.project-container:nth-child(even) .project-title {
+  grid-area: 2/1/3/5;
+  justify-self: start;
+}
+.project-container:nth-child(even) .project-title__before {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.project-container:nth-child(even) .project-content {
+  grid-area: 4/1/12/7;
+}
+.project-container:nth-child(even) .project-tools {
+  grid-area: 10/1/15/-1;
+  padding-left: 5px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.project-container:nth-child(even) .project-image {
+  grid-area: 1/6/15/-1;
+}
+.project-container:nth-child(even) .project-image__btn {
+  right: 12rem;
+}
+
 .section-hero {
   padding: 10rem 22rem;
   min-height: 100vh;
