--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -13,12 +13,12 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(14, 30px);
-
   align-items: center;
   justify-content: center;
 
   & .project-title {
     letter-spacing: 0.1rem;
+    line-height: 1.2;
 
     &__main {
       color: var(--white);
@@ -35,10 +35,11 @@
   & .project-content {
     font-size: 1.8rem;
     line-height: 1.4;
-    z-index: 2;
+    z-index: 3;
+    box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.6);
+    background-color: var(--dark-navy);
 
     &__description {
-      background-color: var(--dark-navy);
       color: var(--light-slate);
       padding: 1.6rem;
       border-radius: 3px;
@@ -48,10 +49,11 @@
   & .project-tools {
     list-style: none;
     color: var(--light-slate);
-    font-weight: 550;
-    font-style: italic;
+    font-weight: 500;
     font-size: var(--fonts-xs);
-    z-index: 3;
+    z-index: 10;
+    display: flex;
+    flex-wrap: wrap;
 
     & li:not(:last-child) {
       margin-right: 15px;
@@ -68,54 +70,24 @@
   & .project-image {
     @include flex_center;
     background-color: var(--lightest-navy);
+    box-shadow: 0.4rem 0.8rem 1.6rem rgba(0, 0, 0, 0.3);
     height: 100%;
     width: 100%;
     border-radius: 3px;
     z-index: 1;
-
-    &__btn {
-      z-index: 3;
-      position: absolute;
-      border: 0;
-      top: 0;
-      padding: 2rem;
-      background-color: rgba(255, 255, 255, 0.8);
-      cursor: pointer;
-    }
   }
 
-  &:nth-child(odd) {
-    & .project-title {
-      grid-area: 2 / 8 / 3 / -1;
-      justify-self: end;
-
-      &__before {
-        @include flex_end;
-      }
-    }
-
-    & .project-content {
-      grid-area: 4 / 7 / 12 / -1;
-    }
-
-    & .project-tools {
-      grid-area: 10 / 1 / 15 / -1;
-      padding-left: 5px;
-      @include flex_end;
-    }
-
-    & .project-image {
-      grid-area: 1 / 1 / 15 / 8;
-
-      &__btn {
-        left: 12rem;
-      }
-    }
+  & .image-btn {
+    z-index: 3;
+    align-self: stretch;
+    border: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    cursor: pointer;
   }
 
   &:nth-child(even) {
     & .project-title {
-      grid-area: 2 / 1 / 3 / 5;
+      grid-area: 1 / 1 / 3 / -1;
       justify-self: start;
 
       &__before {
@@ -124,21 +96,100 @@
     }
 
     & .project-content {
-      grid-area: 4 / 1 / 12 / 7;
+      grid-area: 4 / 1 / 12 / 8;
     }
 
     & .project-tools {
-      grid-area: 10 / 1 / 15 / -1;
+      grid-area: 12 / 1 / -1 / -1;
       padding-left: 5px;
       @include flex_start;
     }
 
     & .project-image {
-      grid-area: 1 / 6 / 15 / -1;
+      grid-area: 1 / 6 / -1 / -1;
+    }
 
-      &__btn {
-        right: 12rem;
+    & .image-btn {
+      grid-area: 1 / 12 / 2 / -1;
+      padding: 0rem 1rem 0rem 1rem;
+    }
+  }
+
+  &:nth-child(odd) {
+    & .project-title {
+      grid-area: 1 / 1 / 3 / -1;
+      justify-self: end;
+
+      &__before {
+        @include flex_end;
       }
     }
+
+    & .project-content {
+      grid-area: 4 / 6 / 12 / -1;
+    }
+
+    & .project-tools {
+      grid-area: 12 / 1 / -1 / -1;
+      padding-left: 5px;
+      @include flex_end;
+    }
+
+    & .project-image {
+      grid-area: 1 / 1 / -1 / 8;
+    }
+
+    & .image-btn {
+      padding: 0 1rem 0 1rem;
+      grid-area: 1 / 1 / 2 / 2;
+    }
+  }
+}
+
+.flex-button {
+  margin-top: 5rem;
+  @include flex_center;
+
+  & button {
+    padding: 1.6rem 3.2rem;
+    cursor: pointer;
+  }
+}
+
+@include respond(tab-land) {
+  .section-projects {
+    padding: 10rem 6rem;
+  }
+
+  .project-container {
+    padding: 0;
+  }
+}
+
+@include respond(tab-land-big) {
+  .section-projects {
+    padding: 10rem 10rem;
+  }
+}
+
+@include respond(tab-port) {
+  .project-container {
+    &:nth-child(even) {
+      @include grid_on_smallScreen;
+    }
+
+    &:nth-child(odd) {
+      @include grid_on_smallScreen;
+    }
+  }
+
+  .section-projects {
+    padding: 10rem 4rem;
+  }
+}
+
+@include respond(phone) {
+  .section-about {
+    padding: 10rem 4rem;
   }
 }
